# RustDefend

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  GROUND_TRUTH_BASELINE.md  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
benches/: scan_throughput.rs
dashboard/: README.md  app.js  index.html  style.css
docs/: awesome-list-submission.md  changelog.md
docs/detectors/: README.md  all_detectors.json  common.md  cosmwasm.md  ink.md  near.md  solana.md
docs/detectors/common/: README.md
docs/detectors/cosmwasm/: README.md
docs/detectors/ink/: README.md
docs/detectors/near/: README.md
docs/detectors/solana/: README.md
docs/tasks/: 01-severity-recalibration.md  02-ink003-precision.md  03-sol003-fp-reduction.md  04-new-detectors-2024.md  05-baseline-rerun.md  README.md
src/: baseline.rs  cache.rs  cli.rs  config.rs  lib.rs  main.rs
src/detectors/: mod.rs
src/detectors/common/: build_script.rs  mod.rs  outdated_deps.rs  proc_macro_risk.rs  supply_chain.rs
src/detectors/cosmwasm/: cw2_migration.rs  improper_error.rs  integer_overflow.rs  missing_address_validation.rs  missing_reply_id.rs  missing_sender_check.rs  mod.rs  reentrancy.rs  storage_collision.rs  sylvia_patterns.rs  unbounded_iteration.rs  unchecked_response.rs  unguarded_migrate.rs  unsafe_ibc.rs
src/detectors/ink/: cross_contract.rs  error_handling.rs  integer_overflow.rs  missing_caller_check.rs  missing_payable_check.rs  mod.rs  panic_usage.rs  reentrancy.rs  timestamp_dependence.rs  unbounded_storage.rs  unguarded_set_code_hash.rs  unsafe_delegate_call.rs
src/detectors/near/: frontrunning.rs  integer_overflow.rs  missing_deposit_check.rs  missing_gas_callback.rs  missing_private.rs  mod.rs  promise_reentrancy.rs  self_callback.rs  signer_vs_predecessor.rs  storage_staking.rs  unguarded_storage_unregister.rs  unhandled_promise.rs  unsafe_storage_keys.rs
src/detectors/solana/: account_confusion.rs  account_data_matching.rs  arbitrary_cpi.rs  checked_arithmetic_unwrap.rs  cpi_reentrancy.rs  duplicate_mutable_accounts.rs  init_if_needed.rs  insecure_account_close.rs  integer_overflow.rs  lookup_table.rs  missing_owner.rs  missing_rent_exempt.rs  missing_signer.rs  mod.rs  pda_issues.rs  priority_fee.rs  remaining_accounts.rs  token_extensions.rs  unchecked_return.rs  unsafe_pda_seeds.rs  (+2 more)
src/mir/: mod.rs  type_map.rs
src/report/: json.rs  mod.rs  sarif.rs  text.rs
src/rules/: custom_detector.rs  engine.rs  mod.rs  parser.rs
src/scanner/: context.rs  finding.rs  mod.rs
src/utils/: ast_helpers.rs  call_graph.rs  chain_detect.rs  mod.rs  workspace.rs
test-fixtures/: Cargo.toml  README.md
test-fixtures/cosmwasm/: Cargo.toml  missing_sender.rs  reentrancy_vuln.rs  storage_collision.rs  unbounded_iteration.rs  unchecked_addr_vuln.rs  unchecked_query_vuln.rs  unsafe_ibc.rs
test-fixtures/ink/: Cargo.toml  allow_reentry.rs  integer_overflow_vuln.rs  missing_caller_vuln.rs  result_suppression_vuln.rs  timestamp_compare.rs  unchecked_invoke_vuln.rs  unsafe_delegate.rs
test-fixtures/near/: Cargo.toml  callback_unwrap_vuln.rs  frontrunning_vuln.rs  missing_deposit_vuln.rs  missing_private_vuln.rs  signer_confusion_vuln.rs  storage_no_auth.rs  unguarded_pending.rs  unsafe_storage_key.rs  wrapping_arithmetic_vuln.rs
test-fixtures/solana/: Cargo.toml  account_data_matching_vuln.rs  checked_arithmetic_unwrap_vuln.rs  cpi_reentrancy_vuln.rs  duplicate_mutable_accounts_vuln.rs  init_if_needed_unsafe.rs  missing_rent_vuln.rs  missing_signer_vuln.rs  remaining_accounts_unsafe.rs  token2022_unsafe.rs  unchecked_cpi.rs  unsafe_pda_vuln.rs  unsafe_reallocation_vuln.rs  unvalidated_sysvar_vuln.rs
tests/: integration.rs
vscode-extension/: README.md  package.json
vscode-extension/src/: extension.ts
