[package]
name = "rustdefend"
version = "0.4.0"
edition = "2021"
description = "Static security scanner for Rust smart contracts"
license = "MIT"

[dependencies]
syn = { version = "2", features = ["full", "visit", "extra-traits"] }
quote = "1"
proc-macro2 = { version = "1", features = ["span-locations"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
rayon = "1"
colored = "2"
toml = "0.8"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[features]
integration-tests = []

[[bench]]
name = "scan_throughput"
harness = false
